--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,8 @@
     <packaging>jar</packaging>
 
     <version>1.0-SNAPSHOT</version>
+    <properties>
+      <maven.compiler.source>1.6</maven.compiler.source>
+      <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
 </project>
